コメント修正

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,3 +5,12 @@ server.error.include-binding-errors=always
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.com.levelog.arena=DEBUG
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/arena
+spring.datasource.username=arena
+spring.datasource.password=arena123
+
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
