--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.StdDateFormat
+spring.jackson.time-zone=UTC
