--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=arena
 spring.datasource.password=arena123
 
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
